# Calculadora_FunTras

./: .gitignore  CMakeLists.txt
GUI/FunTrasGUI/: FunTrasGUI.sln
GUI/FunTrasGUI/FunTrasGUI/: Calculadora.cpp  Calculadora.h  FunTrasGUI.vcxproj  FunTrasGUI.vcxproj.filters  VentanaAyuda.cpp  VentanaAyuda.h  VentanaAyuda.resx  fun_tras.cpp  fun_tras.h  test_funtras.cpp
GUI/FunTrasGUI/FunTrasGUI/x64/Debug/: .NETFramework,Version=v4.7.2.AssemblyAttributes.nativecodeanalysis.sarif  FunTrasGUI.VentanaAyuda.resources  FunTrasGUI.exe.recipe  FunTrasGUI.vcxproj.FileListAbsolute.txt  FunTrasGUI.vcxproj.GenerateResource.cache
GUI/FunTrasGUI/FunTrasGUI/x64/Debug/FunTrasGUI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FunTrasGUI.lastbuildstate  ResGen.command.1.tlog  ResGen.read.1.tlog  ResGen.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
GUI/FunTrasGUI/x64/Debug/: FunTrasGUI.exe.metagen
MetodosPython/: biseccion.py  falsaPosicion.py
